Check if the strigi service is initialized which it is not in case plugins could not be loaded properly. Question is: should a service which cannot be initialized be shut down or should there be an error popup?

BUG: 176233

svn path=/trunk/KDE/kdebase/runtime/; revision=924690